# react-native-fast-image

./: .gitignore  OAT.xml  README.OpenSource  README.md  package.json  tsconfig.build.json  tsconfig.json
example/: App.tsx  app.json  package.json
example/harmony/: .gitignore  build-profile.template.json5  oh-package-lock.json5  oh-package.json5
example/harmony/AppScope/: app.json5
example/harmony/entry/: oh-package-lock.json5  oh-package.json5
example/harmony/entry/src/main/: module.json5
example/harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
example/harmony/entry/src/main/ets/: RNPackagesFactory.ts
harmony/: fast_image.har  fast_image_imageknife.har  readme.md
harmony/fast_image/: BuildProfile.ets  NOTICE  OAT.xml  README.OpenSource  index.ets  oh-package.json5  ts.ts
harmony/fast_image/src/main/: module.json5
harmony/fast_image/src/main/cpp/: CMakeLists.txt  ComponentDescriptors.h  EventEmitters.cpp  EventEmitters.h  FastImageEventEmitRequestHandler.h  FastImageLoaderTurboModule.cpp  FastImageLoaderTurboModule.h  FastImageNode.cpp  FastImageNode.h  FastImagePackage.h  FastImageSource.cpp  FastImageSource.h  FastImageSourceResolver.cpp  FastImageSourceResolver.h  FastImageViewComponentInstance.cpp  FastImageViewComponentInstance.h  FastImageViewJSIBinder.h  FastImageViewNapiBinder.h  FastImageViewPackage.h  Props.cpp  Props.h  RNCFastImageViewTurboModule.cpp  RNCFastImageViewTurboModule.h  ShadowNodes.cpp  ShadowNodes.h  States.cpp  States.h  Uri.cpp  Uri.h
harmony/fast_image/src/main/cpp/colorUtils/: Color.cpp  Color.h  LinearMap.h  StringUtils.h  Utils.h
harmony/fast_image/src/main/cpp/downloadUtils/: DownloadUri.cpp  DownloadUri.h  HttpTaskProcessor.cpp  HttpTaskProcessor.h  LRUCache.h
harmony/fast_image/src/main/cpp/utils/: Color.cpp  Color.h  LinearMap.h  StringUtils.h  Utils.h
harmony/fast_image/src/main/ets/: FastImageLoaderTurboModule.ts  FastImageModifier.ets  FastImagePackage.ts  Logger.ts  RNCFastImageViewTurboModule.ts  RNCSpecs.ts  RNFastImage.ets  TMSpecs.ts
src/: FastImageViewNativeComponent.ts  NativeFastImage.ts  codegenUtils.ts  index.tsx
(+7 files in other folders)
